feat:Second commit
- added ScrollToTop to autoscroll to top of window(might add To Top Button soon)
- added a filter to the app to show recipes depending on region.
(boy..it wasn't easy setting it up but it's wayy better than using vanilla JS)
--also learning how arrays can be implemented in a React component.
--also learning how long strings can be broken down into smaller versions.
--also learnt that keys can be assigned to two elements as long as they're a different kind ,i think
(won't be trying it all the time)
-edited RecipeDetail,added SentenceList to showcase ingredients and instructions for recipes more clearer.
 hopefully i remember these as time goes on and I practise.
We thank God 🙏

--- a/react-app/src/pages/styles/Home.css
+++ b/react-app/src/pages/styles/Home.css
@@ -24,7 +24,7 @@
         max-width: 500px; */
     border-radius: .5rem;
   }
-  border: .5rem solid black;
+  border: 1px solid black;
   border-radius: .5rem;
 }
 .recipe-grid__item__links{
