--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -1,4 +1,7 @@
 /* BEM Grid Layout */
+.root{
+  --accent: #FFA726;
+}
 .recipe-grid {
   display: flex;
   /* flex-direction: column; 
@@ -16,6 +19,7 @@
   flex-direction: column;
   align-items: center;
   flex: 1 1 100%;
+  background-color: white;
   img{
      width:100%; /*400px; */
     max-width: 200px;
@@ -77,3 +81,20 @@
     }
     
   } */
+body{
+  background-color: #DDC7A0 ;
+  background-image: url(/jon-moore-5fIoyoKlz7A-unsplash.jpg);
+}
+a {
+  color: #FFA726; /* warm orange */
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+a:hover,a:focus-within {
+  color: #FB8C00; /* slightly darker orange on hover */
+  text-decoration: underline;
+}
+h1{
+  color:white;
+}
